unpackaged/config/perf_test_utils/objects/BatchResultLog__c.object
<CustomObject>
    <description>Batch Job Result Log - Used during performance testing to monitor more details on each completed batch job. Use the UTIL_BatchJobServe.logJobResult() method in the batch finish method to log activity.</description>
    <fields>
        <fullName>BatchJobId__c</fullName>
        <label>Batch Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildBatchCount__c</fullName>
        <label>Batch Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMLOperationCount__c</fullName>
        <label>DML Operations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMLRows__c</fullName>
        <label>Total DML Rows</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecordsProcessedCount__c</fullName>
        <label>Records Processed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordsModifiedCount__c</fullName>
        <label>Records Modified</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Batch Result Logs</label>
    <nameField>
        <label>Batch Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Result Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ChildBatchCount__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Duration__c</columns>
        <columns>RecordsProcessedCount__c</columns>
        <columns>RecordsModifiedCount__c</columns>
        <columns>DMLOperationCount__c</columns>
        <columns>DMLRows__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>